<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="orderSummary">order summary</string>
    <string name="order">ORDER</string>
</resources>
